--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
     "name": "yhome-cds-interface",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "Interface contracts for yhome-cds",
-    "main": "dist/index.js",
-    "types": "dist/index.d.ts",
-    "files": [
-        "/dist"
-    ],
+    "main": "dist/index",
+    "types": "dist/index",
     "devDependencies": {
         "typescript": "^4.4.3"
     }
