--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,7 @@
 {
     "compilerOptions": {
-        "module": "commonjs",
-        "target": "es2015",
         "declaration": true,
+        "declarationMap": true,
         "outDir": "./dist"
     },
     "include": [
